--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/botclimber/tipster-hub/issues"
   },
-  "homepage": "https://github.com/botclimber/tipster-hub#readme"
+  "homepage": "https://github.com/botclimber/tipster-hub#readme",
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
+  }
 }
